[package]
name = "davs2"
version = "0.1.0"
authors = ["Luni-4 <luni-4@hotmail.it>"]
description = "FFI bindings to davs2"
repository = "https://github.com/Luni-4/davs2-rs"
edition = "2018"
license = "MIT"

[dependencies]
davs2-sys = { path = "davs2-sys" }
paste = "0.1"

[workspace]
members = ["davs2-sys"]
