[package]
name = "davs2-sys"
version = "0.1.0"
authors = ["Luni-4 <luni-4@hotmail.it>"]
description = "FFI bindings to davs2"
repository = "https://github.com/Luni-4/davs2-rs"
edition = "2018"
license = "MIT"

[build-dependencies]
bindgen = "0.50"
metadeps = "1.1"

[package.metadata.pkg-config]
davs2 = "1.6^"
